# mainframe-data-migration

./: .gitignore  README.md  convert_all.py  db2_to_spark_mappings.md  local_test.py  pyproject.toml  run_migration.py  vsam_to_spark_mappings.md
db2/: README.md
db2/output/: export_manifest.json  migration_manifest.json
db2/scripts/: db2_to_json.py  db2_to_postgres.py
docs/: DB2_MIGRATION_DESIGN.md  DESIGN.md  HOW_IT_WORKS.md  executive-presentation.html  executive-presentation.md
input/: DISCGRP.cpy  TCATBALF.cpy
mf_spark/: __init__.py  cli.py
mf_spark/config/: __init__.py  settings.py
mf_spark/converters/: __init__.py  db2_types.py  type_mapper.py  vsam_types.py
mf_spark/core/: __init__.py  base.py  migrator.py  session.py
mf_spark/parsers/: __init__.py  copybook_parser.py  dcl_parser.py  ddl_parser.py
mf_spark/utils/: __init__.py  encoding.py  file_utils.py
mf_spark/validators/: __init__.py  data_validator.py  schema_validator.py
output/: conversion_manifest.json
output/accounts/: .part-00000-b823728a-3af2-480c-aea8-a465d22c3860-c000.json.crc  part-00000-b823728a-3af2-480c-aea8-a465d22c3860-c000.json
output/card_xref/: .part-00000-d3830987-bda3-4714-8a2c-543f4dea305f-c000.json.crc  part-00000-d3830987-bda3-4714-8a2c-543f4dea305f-c000.json
output/cards/: .part-00000-bebad9af-759c-4214-b94b-3329de6a4a52-c000.json.crc  part-00000-bebad9af-759c-4214-b94b-3329de6a4a52-c000.json
output/category_balances/: .part-00000-92acb23d-5a38-4b95-9144-b908bb771900-c000.json.crc  part-00000-92acb23d-5a38-4b95-9144-b908bb771900-c000.json
(+18 files in other folders)
